syntax = 'proto3';

package user;

service UserService {
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}

message User {
    string email = 1;
    string first_name = 2;
    string last_name = 3;
}

message GetUsersResponse {
    repeated User users = 1;
}

message GetUsersRequest {}
